# bts_populationsim

./: .gitignore  .lintr  README.md  batch_run.py  bts_env.yml  bts_populationsim.yml  bts_populationsim_env.yml  combine.py  copy_folder.py  copy_folder_2019.py  copy_folder_2021.py  hh_config.json  hh_pop_adjust.py  pyproject.toml  requirements.txt  run_populationsim.py  setup_environments.bat
populationsim/configs/: controls.csv  controls_aggregator.csv  settings.yaml  validation_configs.yaml
populationsim/configs_mp/: settings.yaml
populationsim/data/: .gitignore  control_totals_BG.csv  control_totals_TRACT.csv  geo_cross_walk.csv  scaled_control_totals_meta.csv
populationsim/output/: .gitignore  breadcrumbs.yaml
setup/: __main__.py  controls_aggregator.csv  data.py  fetch.py  geographies.py  prepare_data.py  settings.py  settings_helper.py  settings_helpers.py  utils.py
setup/raw/: acs_tables.csv
setup/scripts/: data.py  prepare_data.py  settings.py  utils.py
setup_inputs/: controls_aggregator.csv  fetch.py  geographies.py  prepare_data.py  settings.py  settings_helpers.py  utils.py
setup_inputs/raw/: .gitignore  acs_tables.csv
validation/: summarize_weights.Rmd  validatePopulationSim.R  validate_populationsim.py  validation_configs.yaml
