[tool.poetry]
name = "bts-populationsim"
version = "0.1.0"
description = ""
authors = ["Nicholas Fournier <nick.fournier@rsginc.com>", "Adib Sarker <adib.sarker@rsginc.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
populationsim = {git = "https://github.com/RSGInc/populationsim.git", rev = "v0.6.1"}
geopandas = "^0.14.3"
requests = "^2.31.0"
pyarrow = "^16.0.0"
python-dotenv = "^1.0.1"
us = "^3.1.1"
bs4 = "^0.0.2"
pandas = "2.1.0"
seaborn = "^0.13.2"
activitysim = "1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
